# mister-skinnylegs

./: .gitignore  LICENSE  README.md  mister-skinnylegs.py  pyproject.toml  requirements.txt
mister_skinnylegs/: __init__.py  mister_skinnylegs.py
mister_skinnylegs/plugins/: binance_plugin.py  bing_plugin.py  chatgpt_plugin.py  coinbase_plugin.py  deepseek_plugin.py  discord_plugin.py  dropbox_plugin.py  duckduckgo_plugin.py  example_plugin_.py  google_drive_plugin.py  google_plugin.py  o365_sharepoint_plugin.py  reddit_plugin.py  storage_dump_plugin.py
mister_skinnylegs/util/: __init__.py  artifact_utils.py  common.py  fs_utils.py  plugin_loader.py  profile_folder_protocols.py
plugins/: binance_plugin.py  bing_plugin.py  chatgpt_plugin.py  coinbase_plugin.py  deepseek_plugin.py  discord_plugin.py  dropbox_plugin.py  duckduckgo_plugin.py  example_plugin.py  example_plugin_.py  google_drive_plugin.py  google_plugin.py  o365_sharepoint_plugin.py  reddit_plugin.py  storage_dump_plugin.py
util/: artifact_utils.py  fs_utils.py  plugin_loader.py  profile_folder_protocols.py
