[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "mister_skinnylegs",
    "mister_skinnylegs.util",
    "mister_skinnylegs.plugins",
]

[project]
name = "mister_skinnylegs"
version = "0.0.14"
authors = [
  { name="Alex Caithness", email="research@cclsolutionsgroup.com" },
]
description = "mister-skinnylegs is an open plugin framework for parsing website/webapp artifacts in browser data. It currently provides a command line interface (CLI) for running the plugins against a Chrome/Chromium or Mozilla Firefox Profile Folder."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
keywords = [
    "digital forensics", "dfir", "chrome", "chromium", "localstorage", "sessionstorage", "indexeddb", "webcache",
    "mozilla", "firefox", "browser"]
dependencies = [
    "ccl_chromium_reader @ git+https://github.com/cclgroupltd/ccl_chrome_indexeddb.git",
    "ccl_mozilla_reader @ git+https://github.com/cclgroupltd/ccl_mozilla_reader.git",
]

[project.scripts]
mister-skinnylegs = "mister_skinnylegs:cli"

[project.urls]
Homepage = "https://github.com/cclgroupltd/ccl_mozilla_reader"
Issues = "https://github.com/cclgroupltd/ccl_mozilla_reader/issues"